--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,15 @@
         "psr-4": {
             "\\maxlen\\parser\\": ""
         }
-    }
+    },
+    "require": {
+		"electrolinux/phpquery": "dev-master",
+		"maxlen/proxy": "dev-master"
+	},
+	"repositories":[
+	    {
+            "type":"git",
+            "url":"https://github.com/maxlen/pdffiller_proxy"
+        }
+    ]
 }
